--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -24,6 +24,7 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700" media="none" onload="this.media='all';">
     <link rel="stylesheet" href="css/style.min.css" />
+    <base href="/">
 </head>
 
 <body ng-controller="AppController">
